css fixes inc about me spacing

--- a/src/Views/Final/FinalPage.css
+++ b/src/Views/Final/FinalPage.css
@@ -20,11 +20,11 @@
 
 .FinalPage {
   background: linear-gradient(35deg, #005ad7, #70b4f7, #010ea0);
-  animation: AnimationName 15s ease infinite;
+  animation: BackgroundColorFade 15s ease infinite;
   /* line-height: 1.3; */
 }
 
-@keyframes AnimationName {
+@keyframes BackgroundColorFade {
   0%{background-position:0% 73%}
   50%{background-position:100% 28%}
   100%{background-position:0% 73%}
